--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main>
         <div class="container main-container">
         <section class="section section-profile" id="profile">
-            <img src="./assets/img/avatar.jpg" alt="avatar" class="logo">
+            <img src="./img/avatar.jpg" alt="avatar" class="logo">
             <div class="main-title-name">
             <h1 class="section-title main-title">Ermoshkin Aleksandr</h1>
             <p>My name is Aleksandr
@@ -77,7 +77,7 @@ I like photography, 3d (blender), computer hardware, open source, arcolinux, pyt
         <section class="section" id="education">
             <h2 class="section-title">Education</h2>
             <p>OMGA</p>
-            <img src="http://omga.su/upload/medialibrary/397/397ba4fd3a42b1ddbdc9e41f9021c0a9.png" alt="OMGA Logo" class="omga-logo">
+            
 
         </section> 
         <section class="section" id="english">
@@ -94,7 +94,7 @@ I like photography, 3d (blender), computer hardware, open source, arcolinux, pyt
             <div>© 2022 <a  href="https://github.com/als-creator">als-creator</a>    
 
         </div>
-           <a href="https://rs.school/js-stage0/"><img src="./assets/img/rslogo.png" alt="rslogo"></a>
+           <a href="https://rs.school/js-stage0/"><img src="./img/rslogo.png" alt="rslogo"></a>
         </div>
 
 
