--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cv</title>
    <link rel="stylesheet" href="style.css" type="text/css"/>
-    <link rel="icon" href="assets/img/favicon.ico">
+    <link rel="icon" href="./favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Nuosu+SIL&display=swap" rel="stylesheet">
     
@@ -32,7 +32,7 @@
     <main>
         <div class="container main-container">
         <section class="section section-profile" id="profile">
-            <img src="./assets/img/avatar.jpg" alt="avatar" class="logo">
+            <img src="./avatar.jpg" alt="avatar" class="logo">
             <div class="main-title-name">
             <h1 class="section-title main-title">Ermoshkin Aleksandr</h1>
             <p>My name is Aleksandr
@@ -95,7 +95,7 @@ I like photography, 3d (blender), computer hardware, open source, arcolinux, pyt
             <div>© 2022 <a  href="https://github.com/als-creator">als-creator</a>    
 
         </div>
-           <a href="https://rs.school/js-stage0/"><img src="./assets/img/rslogo.png" alt="rslogo"></a>
+           <a href="https://rs.school/js-stage0/"><img src="./rslogo.png" alt="rslogo"></a>
         </div>
 
 
