--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cv</title>
-   <link rel="stylesheet" href="style.css" type="text/css"/>
+   <link rel="stylesheet" href="../style.css" type="text/css"/>
     <link rel="icon" href="assets/img/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Nuosu+SIL&display=swap" rel="stylesheet">
@@ -32,7 +32,7 @@
     <main>
         <div class="container main-container">
         <section class="section section-profile" id="profile">
-            <img src="./assets/img/avatar.jpg" alt="avatar" class="logo">
+            <img src="https://i.imgur.com/pjZUiTv.png" alt="avatar" class="logo">
             <div class="main-title-name">
             <h1 class="section-title main-title">Ermoshkin Aleksandr</h1>
             <p>My name is Aleksandr
@@ -70,20 +70,22 @@ I like photography, 3d (blender), computer hardware, open source, arcolinux, pyt
         <section class="section" id="courses">
             <h2 class="section-title">Courses</h2>
             <p>RS-School</p>
+        
+            <section class="section" id="education">
+            <h2 class="section-title">Education</h2>
+            <p>OMGA</p>
+            <img src="http://omga.su/" alt="OMGA Logo" class="omga">
+
         </section> 
         <section class="section" id="projects">
             <h2 class="section-title">Projects</h2>
-            <p>Not yet</p>
-        </section>    
-        <section class="section" id="education">
-            <h2 class="section-title">Education</h2>
-            <p>OMGA</p>
-            <img src="http://omga.su/upload/medialibrary/397/397ba4fd3a42b1ddbdc9e41f9021c0a9.png" alt="OMGA Logo" class="omga-logo">
+            <p>AIM training game</p>
+            <img src="https://github.com/als-creator/AimTrainingGame" alt="AIM" class="AIM">
 
-        </section> 
+        </section>
         <section class="section" id="english">
             <h2 class="section-title">English</h2>
-            <p>A1 Intermediate</p>
+            <p>A2 Intermediate</p>
           </section>      
         
         </div>
@@ -95,7 +97,7 @@ I like photography, 3d (blender), computer hardware, open source, arcolinux, pyt
             <div>© 2022 <a  href="https://github.com/als-creator">als-creator</a>    
 
         </div>
-           <a href="https://rs.school/js-stage0/"><img src="./assets/img/rslogo.png" alt="rslogo"></a>
+           <a href="https://rs.school/js-stage0/"><img src="https://rs.school/images/rs_school-og.png" alt="rslogo"></a>
         </div>
 
 
