--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ I like photography, 3d (blender), computer hardware, open source, arcolinux, pyt
             <div>© 2022 <a  href="https://github.com/als-creator">als-creator</a>    
 
         </div>
-           <a href="https://rs.school/js-stage0/"><img src="https://rs.school/images/rs_school-og.png" width="20" height="40" alt="rslogo"></a>
+           <a href="https://rs.school/js-stage0/"><img src="https://github.com/als-creator/rsschool-cv/blob/main/rslogo.png" alt="rslogo"></a>
         </div>
 
 
